tests/integration/error/out_of_scope_variable.alo
// expect-error: Undefined variable 'inner'

fun main() -> void {
    if (true) {
        imut inner: int = 42;
    }

    imut value: int = inner;
}
